Added more product actions on the stock overview page (closes #327)
